2011-10-09    <h.v.raven@googlemail.com>

	* src/target.cpp (Target): added checks before delete

	* src/error.h (Invalid_Attribute): new error struct

	* src/spell.cpp (~Spell): added delete for target
	* src/spell.cpp (set_target): new function

	* src/gtkwindow.cpp (display_spell): added target to output

	* src/xml.cpp (get_spell): added check and import for target
	* src/xml.cpp (check_spell_target_, get_spell_target): new functions

2011-10-08    <h.v.raven@googlemail.com>

	* src/target.cpp new class for spell target

	* src/spell.h reorganized class structure of Spell
	* src/spell.h (Spell_Base_Element) renamed Spell_Element
	* src/spell.h (Spell_Element, Spell_String_Element) new classes
	* src/spell.h (fill_base_elements_) new function

	* src/savingthrow.cpp (print, set_value): added support for partial and disbelief

2011-10-07    <h.v.raven@googlemail.com>

	* src/strmanip.cpp:
	* src/strmanip.h: created to_[upper|lower] and str_[upper|lower] for std::string

	* src/savingthrow.cpp (set_type, set_value): replaced multiple checks with conversion to lower case
